# BOMSyncTool

./: .gitignore  .tauri-dev.json  BUILD.md  Cargo.toml  README.md  dir_tree.txt  tauri.conf.json
capabilities/: default.json
sample_data/: bom_a.csv  bom_b.csv  bom_large.csv
sessions/: .tauri-dev.json
sessions/auto/: 1759739542-z0d4k6Cj.json  1759739675-TqWJFEiB.json  1759740213-wYx69HIW.json  1759740736-D1Yyq5rV.json
src/: bom_processor.rs  comparison.rs  file_handler.rs  main.rs  session.rs  synthesis.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bom_processor.rs  comparison.rs  file_handler.rs  main.rs  synthesis.rs
